# jsp-benchmarks

./: pyproject.toml
jsp_benchmarks/: __init__.py  instance_loader.py
tests/: test_jsp_benchmarks.py
