[tool.poetry]
name = "jsp_benchmarks"
version = "0.1.1"
description = "ジョブショップスケジューリング問題のベンチマーク問題をpythonのクラスで表現し，load出来るようにする"
repository = "https://github.com/tkp0331/jsp-benckmarks"
authors = ["鈴木貴大 <merioda.seven.24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
jsp-exp = "^0.1.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
